--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
     //Dependência Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+    // Circle Image View
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
