--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MarvelComics">
-        <activity android:name=".ui.account.AccountActivity"></activity>
+        <activity android:name=".ui.account.AccountActivity"
+            android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".ui.hq.HqActivity" />
         <activity android:name=".ui.login.LoginActivity" />
         <activity android:name=".ui.splash.SplahActivity">
